--- a/gradient/index.html
+++ b/gradient/index.html
@@ -71,7 +71,7 @@
        </select>
      </p>
 
-     <button type="button" class="btn btn-primary" @click="submit_answers()" v-if="confidence!=0 && load!=0">Get code for Amazon MTurk</button>
+     <button type="button" class="btn btn-primary" @click="submit_answers()" v-if="confidence!=0 && load!=0">Submit and end Test</button>
    </div>
 
 <!-- Submission -->
