--- a/dot/index.html
+++ b/dot/index.html
@@ -52,6 +52,7 @@
      
 
      <button type="button" class="btn btn-primary" @click="add_answer()">Submit answer</button>
+  <img src="https://rezpe.github.io/survey/explanations/dot_explanation.png"></img>
    </div>
 
 <!-- Confidence and load -->
