--- a/dot/index.html
+++ b/dot/index.html
@@ -52,7 +52,11 @@
      
 
      <button type="button" class="btn btn-primary" @click="add_answer()">Submit answer</button>
-  <img src="https://rezpe.github.io/survey/explanations/dot_explanation.png"></img>
+     
+     <p class="lead font-weight-normal">
+       <img src="https://rezpe.github.io/survey/explanations/dot_explanation.png"></img>
+     </p>
+  
    </div>
 
 <!-- Confidence and load -->
