--- a/dot/index.html
+++ b/dot/index.html
@@ -50,9 +50,9 @@
        <input type="text" v-model="answer"></input> 
      </p>
      
-
+<p class="lead font-weight-normal">
      <button type="button" class="btn btn-primary" @click="add_answer()">Submit answer</button>
-     
+      </p>
      <p class="lead font-weight-normal">
        <img src="https://rezpe.github.io/survey/explanations/dot_explanation.png"></img>
      </p>
